2022-11-15T16:06:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3472113926 # 625
* notice: last 14d: unq all: 10 5680
* notice: prev accum: outdated-unq outdated-all / unq all: 1206 84878 / 1234 90580
* notice: next accum: outdated-unq outdated-all / unq all: 1206 84878 / 1235 90558
* notice: prev exec diff / last date diff / accum: unq all: +1 +123 -0 -145 / +2 +264 -0 -0 / 2 264
* notice: removed / changed dates: [] / [2022-11-01 2022-11-15]

2022-11-15T08:07:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3468570727 # 624
* notice: last 14d: unq all: 10 5702
* notice: prev accum: outdated-unq outdated-all / unq all: 1206 84878 / 1233 90619
* notice: next accum: outdated-unq outdated-all / unq all: 1206 84878 / 1234 90580
* notice: prev exec diff / last date diff / accum: unq all: +1 +143 -0 -182 / +1 +141 -0 -0 / 1 141
* notice: removed / changed dates: [] / [2022-11-01 2022-11-14 2022-11-15]

2022-11-15T00:30:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3466361656 # 623
* notice: last 14d: unq all: 10 5741
* notice: prev accum: outdated-unq outdated-all / unq all: 1204 84470 / 1231 90141
* notice: next accum: outdated-unq outdated-all / unq all: 1206 84878 / 1233 90619
* notice: prev exec diff / last date diff / accum: unq all: +1 +149 -0 -14 / +3 +411 -0 -0 / 3 411
* notice: removed / changed dates: [2022-10-31] / [2022-11-01 2022-11-14]

2022-11-14T16:07:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3463141538 # 622
* notice: last 14d: unq all: 9 5671
* notice: prev accum: outdated-unq outdated-all / unq all: 1204 84470 / 1231 90165
* notice: next accum: outdated-unq outdated-all / unq all: 1204 84470 / 1231 90141
* notice: prev exec diff / last date diff / accum: unq all: +1 +122 -1 -146 / +2 +262 -0 -0 / 2 262