@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-03T00:34:37Z",
-  "count" : 409,
+  "timestamp" : "2022-11-16T00:31:44Z",
+  "count" : 392,
   "count_minmax" : [ 138, 409 ],
-  "count_decinc" : [ -0, +409 ],
+  "count_decinc" : [ -17, +409 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
