@@ -1,15 +1,10 @@
 {
-  "count": 5680,
+  "count": 5748,
   "uniques": 10,
   "clones": [
     {
-      "timestamp": "2022-11-01T00:00:00Z",
-      "count": 66,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-11-02T00:00:00Z",
-      "count": 409,
+      "count": 392,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-11-15T00:00:00Z",
-      "count": 264,
+      "count": 415,
       "uniques": 2
     }
   ]
