@@ -1,3 +1,11 @@
+2022-11-16T00:31:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3475318252 # 626
+* notice: last 14d: unq all: 10 5748
+* notice: prev accum: outdated-unq outdated-all / unq all: 1206 84878 / 1235 90558
+* notice: next accum: outdated-unq outdated-all / unq all: 1208 85285 / 1235 91033
+* notice: prev exec diff / last date diff / accum: unq all: +0 +151 -0 -17 / +2 +415 -0 -0 / 2 415
+* notice: removed / changed dates: [2022-11-01] / [2022-11-02 2022-11-15]
+
 2022-11-15T16:06:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3472113926 # 625
 * notice: last 14d: unq all: 10 5680
